--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -1,9 +1,13 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["src/*"],
-      "@components/*": ["src/components/*"],
-    }
+      "baseUrl": ".",
+      "paths": {
+          "@/*": ["src/*"],
+          "@components/*": ["src/components/*"],
+          "@scss/*": ["src/scss/*"],
+          "@shared/*": ["src/components/shared/*"],
+          "@models/*": ["src/models/*"],
+          "@contexts/*": ["src/contexts/*"]
+      }
   }
 }
